# mathews-recurring-revenue

./: .gitignore
dbt_project/: .example.env  Dockerfile  dbt_project.yml  docker-compose.yml  job.yaml  profiles.yml  pyproject.toml
dbt_project/macros/config/: generate_alias_name.sql  generate_schema_name.sql  query_comment.sql
dbt_project/macros/date/: get_current_date.sql  get_current_timestamp.sql
dbt_project/macros/obfuscation/: obfuscate_number.sql  obfuscate_string.sql  random_float64.sql  random_number.sql  redistribute_evenly_across_months.sql  redistributed_evenly_across_months.sql
dbt_project/models/: google_sheets_clean.test_spreadsheet.sql  google_sheets_raw.test_spreadsheet.yml
dbt_project/models/incomes/: int.incomes_clean.sql  mdm.incomes_fct_pub.sql  mdm.incomes_fct_pvt.sql  raw.google_sheets__incomes.yml
dbt_project/models/int/: int.incomes_clean.sql
dbt_project/models/mdm/: mdm.incomes_fct.sql
dbt_project/models/stg/: stg.google_sheets__incomes.yml
evidence/: .example.env  evidence.config.yaml  package-lock.json  package.json
scripts/: gcp-auth.sh  gcp-config.sh  gcp-login.sh  setup-terraform-remote.sh  terraform-setup-local.sh  terraform-setup-remote.sh  tf-setup-local.sh  utils.sh
terraform/: .terraform.lock.hcl  apis.tf  backend.tf  bigquery.tf  bigquery_dataset_stg.tf  bigquery_table_google_sheets__incomes.tf  bigquery_tables.tf  cloud_storage_bucket_mathews_recurring_revenue_terraform.tf  providers.tf  service_account.tf  service_account_dbt_project.tf  service_account_terraform.tf  service_accounts.tf  services.tf  setup.tf  (+1 more)
(+82 files in other folders)
